--- a/app/src/main/res/layout/fragment_view_animator.xml
+++ b/app/src/main/res/layout/fragment_view_animator.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kdanmobile.animationpractice.screen.viewanimation.ViewAnimationFragment">
+    tools:context=".screen.viewanimator.ViewAnimatorFragment">
 
     <TextView
         android:layout_width="match_parent"
