--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,8 +3,8 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_viewAnimation"
-            android:title="View animation" />
+            android:id="@+id/nav_viewAnimator"
+            android:title="View animator" />
     </group>
 
 </menu>
